# piconsole

./: README.md
3dparts/: piconsole.blend
3dparts/stl/: battery_holder.stl  bottom_shell.stl  button.stl  component_holder_center.stl  component_holder_left.stl  component_holder_right.stl  component_holder_top.stl  dpad.stl  lcd_bezel.stl  power_toggle.stl  top_shell.stl
firmware/source/: .clang-format  CMakeLists.txt  api.h  cpu.c  display.c  gpu.c  images.c  ipu.c  main.c  pong.c
schematics/: piconsole.kicad_prl  piconsole.kicad_pro  piconsole.kicad_sch  piconsole.kicad_sym  sym-lib-table
